fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -170,6 +170,8 @@ header {
   padding: 1em;
   max-width: 1440px;
   margin: auto;
+  padding-top: 3em;
+  padding-bottom: 2em;
 }
 
 @media (max-width: 600px) {
@@ -193,11 +195,15 @@ h1 {
 h2 {
   font-size: var(--step-up-2);
   font-weight: 600;
-  padding-top: 2em;
+  padding-bottom: 0.5em;
 }
 
 h3 {
   font-weight: 600;
+}
+
+.main-text {
+  max-width: 600px;
 }
 
 section {
@@ -205,7 +211,6 @@ section {
 }
 
 .section__portfolio {
-  padding-top: 1em;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -271,7 +276,6 @@ section {
 	align-items: flex-start;
   align-content: stretch;
   font-size: var(--step-down-2);
-  margin-top: 1em;
 }
 
 .social__item {
